fix: [PL-37854]: Clean V1 api's (#50314)